manifests-openshift/deploy-acmeair-mainservice-java.yaml
###### Main Service ######
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-mainservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-main-deployment
  template:
    metadata:
      labels:
        name: acmeair-main-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      containers:
      - name: acmeair-mainservice-java
        image: quay.io/mmondics/acmeair-mainservice-java-s390x:v1.0.0
        ports:
        - containerPort: 9080
        - containerPort: 9443
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-main-service
spec:
  ports:
    - port: 9080
  selector:
    name: acmeair-main-deployment
