manifests-openshift/acmeair-mainservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-main-route
  labels:
    app.kubernetes.io/part-of: main-service
spec:
  host: _HOST_
  path: /acmeair
  to:
    kind: Service
    name: acmeair-main-service
  port:
    targetPort: 9080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
